--- a/client/src/components/cardPost/post.module.css
+++ b/client/src/components/cardPost/post.module.css
@@ -1,45 +1,132 @@
+.bodyNoScroll {
+    overflow: hidden;
+}
+
 .post {
     height: auto;
     width: 600px;
     padding: 16px;
+    padding-top: 0px;
     border-radius: 16px;
     box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.15);
     border: 1px solid #ccc;
+    background-color: white;
+    
+    position: relative;
+    z-index: 1;
 }
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    z-index: 999; 
+}
+
+.headerPost {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    border-bottom: 1px solid #ccc;
+    padding: 16px;
+    
+}
+.headerPost h1 {
+    display: flex;
+    justify-content: center;
+    margin: 0px;
+}
+.closeButton {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: none;
+    border: none;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+.postExpanded {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    width: 600px;
+    height: auto;
+    max-height: 80%;
+    overflow-y: auto;
+    z-index: 1000;
+    box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.15);
+}
+
 .postInformation {
+    margin-top: 10px;
     display: grid;
     grid-template-columns: 12% 88%;
     gap: 10px;
 }
+
+
 .profileName {
-    margin: 0px;
+    margin: 0;
 }
+
 .postText {
     margin-top: 6px;
     margin-bottom: 10px;
 }
+
 .profileImage {
     display: flex;
 }
+
 .profileImage img,
 .commentProfileImage img {
     height: 64px;
     width: 64px;
     border-radius: 50%;
 }
+
 .postGrid2 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
+
 .postImage img {
     display: flex;
     justify-content: center;
 }
+
 .postImage img {
     max-width: 460px;
     max-height: 460px;
     border-radius: 16px;
+}
+
+.commentButton {
+    display: flex;
+    align-items: center;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin-top: 10px;
+    align-self: flex-start;
+    gap: 5px;
+}
+.commentButton p {
+    font-weight: bold;
+}
+
+.commentIcon {
+    width: 26px; 
+    height: 24px; 
 }
 
 .commentsSection {
@@ -90,6 +177,7 @@
 .newComment {
     display: flex;
     flex-direction: column;
+    width: 95%;
     margin-top: 20px;
 }
 
@@ -100,6 +188,7 @@
     border-radius: 16px;
     margin-bottom: 10px;
 }
+
 .newCommentInput:hover,
 .newCommentInput:focus {
     border-color: #0866ff;
@@ -108,7 +197,7 @@
 }
 
 .newCommentButton {
-    align-self: flex-end;
+    align-self: flex-start;
     padding: 0.7rem 1.4rem;
     border: none;
     font-size: 1rem;
@@ -123,4 +212,8 @@
 .newCommentButton:hover {
     background-color: white;
     color: #4b4f56;
+}
+
+.hideButton {
+    display: none;
 }
